# TDURecomp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Readme.md  vcpkg.json
MainDocs/: Build_Errors_Breakdown.csv  Implement.md  KernelStubNotes.md  KernelStubNotes2.md  KernelStubNotes3.md  Kernel_Function_Issues_Final.csv  Kernel_Function_Linking_Issues.csv  Missing_GPU_Functions_and_Files.csv  New_GPU_Link_Errors.csv
reblue/: .gitignore  CMakeLists.txt  Implement.md  README.md  app.cpp  app.h  decompressor.h  endian.h  exports.cpp  exports.h  framework.h  main.cpp  misc_impl.cpp  mutex.h  natvis.natvis  preload_executable.cpp  preload_executable.h  sdl_events.h  sdl_listener.cpp  sdl_listener.h  stdafx.cpp  stdafx.h  version.cmake
reblue/apu/: Implement.md  audio.cpp  audio.h  embedded_player.cpp  embedded_player.h
reblue/apu/driver/: sdl2_driver.cpp
reblue/cpu/: Implement.md  guest_stack_var.h  guest_thread.cpp  guest_thread.h  ppc_context.h
reblue/gpu/: Implement.md  README.md  gpu_stub.cpp  video.cpp  video.h
reblue/gpu/cache/: pipeline_state_cache.h  vertex_declaration_cache.h  vertex_element_cache.h
reblue/gpu/imgui/: imgui_common.cpp  imgui_common.h  imgui_font_builder.cpp  imgui_font_builder.h  imgui_snapshot.cpp  imgui_snapshot.h
reblue/gpu/rhi/: plume_d3d12.cpp  plume_d3d12.h  plume_render_interface.h  plume_render_interface_builders.h  plume_render_interface_types.h  plume_vulkan.cpp  plume_vulkan.h
reblue/gpu/shader/: .gitignore  blend_color_alpha_ps.hlsl  copy_color_ps.hlsl  copy_common.hlsli  copy_depth_ps.hlsl  copy_vs.hlsl  csd_filter_ps.hlsl  csd_no_tex_vs.hlsl  csd_vs.hlsl  enhanced_motion_blur_ps.hlsl  gamma_correction_ps.hlsl  gaussian_blur.hlsli  gaussian_blur_3x3.hlsl  gaussian_blur_5x5.hlsl  gaussian_blur_7x7.hlsl  gaussian_blur_9x9.hlsl  imgui_common.hlsli  imgui_ps.hlsl  imgui_vs.hlsl  movie_common.hlsli  movie_ps.hlsl  movie_vs.hlsl  resolve_msaa_color.hlsli  resolve_msaa_color_2x.hlsl  resolve_msaa_color_4x.hlsl  resolve_msaa_color_8x.hlsl  resolve_msaa_depth.hlsli  resolve_msaa_depth_2x.hlsl  resolve_msaa_depth_4x.hlsl  resolve_msaa_depth_8x.hlsl
reblue/hid/: Implement.md  hid.cpp  hid.h
reblue/hid/driver/: sdl_hid.cpp
reblue/install/: directory_file_system.h  installer.cpp  installer.h  iso_file_system.cpp  iso_file_system.h  update_checker.cpp  update_checker.h  virtual_file_system.h  xcontent_file_system.cpp  xcontent_file_system.h
reblue/install/hashes/: apotos_shamar.cpp  apotos_shamar.h  chunnan.cpp  chunnan.h  empire_city_adabat.cpp  empire_city_adabat.h  game.cpp  game.h  holoska.cpp  holoska.h  mazuri.cpp  mazuri.h  spagonia.cpp  spagonia.h  update.cpp  update.h
reblue/kernel/: Implement.md  freelist.h  function.h  hal.cpp  hal.h  heap.cpp  heap.h  imports.cpp  kernel.cpp  kernel.h  memory.cpp  memory.h  net.cpp  net.h  xam.cpp  xam.h  xdbf.h  xdm.cpp  xdm.h
reblue/kernel/io/: file_system.cpp  file_system.h
reblue/locale/: Implement.md  config_locale.cpp  locale.cpp  locale.h
reblue/mod/: ini_file.h  ini_file.inl  mod_loader.cpp  mod_loader.h
reblue/os/: .gitignore  Implement.md  logger.h  media.h  process.h  registry.h  user.h  version.h
reblue/os/linux/: logger_linux.cpp  media_linux.cpp  process_linux.cpp  registry_linux.inl  user_linux.cpp  version_linux.cpp
reblue/os/win32/: logger_win32.cpp  media_win32.cpp  process_win32.cpp  registry_win32.inl  user_win32.cpp  version_win32.cpp
reblue/patches/: CGameModeStageTitle_patches.cpp  CHudPause_patches.cpp  CTitleStateIntro_patches.cpp  CTitleStateIntro_patches.h  CTitleStateMenu_patches.cpp  aspect_ratio_patches.cpp  aspect_ratio_patches.h  audio_patches.cpp  audio_patches.h  camera_patches.cpp  camera_patches.h  fps_patches.cpp  frontend_listener.cpp  input_patches.cpp  inspire_patches.cpp  inspire_patches.h  misc_patches.cpp  object_patches.cpp  player_patches.cpp  resident_patches.cpp  video_patches.cpp
reblue/res/: .gitignore  Implement.md  credits.h  version.cpp.template  version.h.template  version.txt
reblue/res/win32/: Implement.md  res.rc.template
reblue/ui/: Implement.md  achievement_menu.cpp  achievement_menu.h  achievement_overlay.cpp  achievement_overlay.h  black_bar.cpp  black_bar.h  button_guide.cpp  button_guide.h  fader.cpp  fader.h  game_window.cpp  game_window.h  imgui_utils.cpp  imgui_utils.h  installer_wizard.cpp  installer_wizard.h  message_window.cpp  message_window.h  options_menu.cpp  options_menu.h  options_menu_thumbnails.cpp  options_menu_thumbnails.h  tv_static.cpp  tv_static.h
reblue/user/: Implement.md  achievement_data.cpp  achievement_data.h  achievement_manager.cpp  achievement_manager.h  config.cpp  config.h  config_def.h  paths.cpp  paths.h  persistent_data.cpp  persistent_data.h  persistent_storage_manager.cpp  persistent_storage_manager.h  registry.cpp  registry.h
rebluelib/: CMakeLists.txt  Implement.md
rebluelib/config/: EOTJumpTable.toml  config.toml  jump_table.toml
rebluelib/shader/: .gitignore  shader_cache.h
resources/: Implement.md
resources/images/achievements_menu/: trophy.dds
resources/images/common/: controller.dds  general_window.dds  hedge-dev.dds  kbm.dds  light.dds  select.dds
resources/images/installer/: arrow_circle.dds  install_001.dds  install_002.dds  install_003.dds  install_004.dds  install_005.dds  install_006.dds  install_007.dds  install_008.dds  miles_electric_icon.dds  pulse_install.dds
resources/images/logo/: Logo.afphoto
resources/images/reddog/: button_close_1.dds  button_close_2.dds  button_minimum_1.dds  button_minimum_2.dds  button_pin_1.dds  button_pin_2.dds  checkbox_1.dds  checkbox_2.dds  common_button_1.dds  common_button_2.dds  common_icon.dds  debug_icon.dds  title_bar.dds
resources/sounds/raw/: !downmix.py
scripts/: Implement.md
scripts/ida/: get_recomp_funcs.py
tools/: CMakeLists.txt  Implement.md
tools/bc_diff/: CMakeLists.txt  bc_diff.cpp  bc_diff.h
tools/file_to_c/: CMakeLists.txt  file_to_c.cpp
tools/fshasher/: CMakeLists.txt  fshasher.cpp  plainargs.h
tools/x_decompress/: CMakeLists.txt  x_decompress.cpp
(+1 files in other folders)
